# omamale

./: README.md
openwebui/: docker-compose.yaml
qdrant/: config.yaml  docker-compose.yaml
rag-stack-local/agents/: docker-compose.yaml  readme.md
rag-stack-local/agents/final-answer/: agent.py  requirements.txt
rag-stack-local/agents/multiagent/: agent.py  requirements.txt
rag-stack-local/agents/oracle/: Dockerfile  agent.py
rag-stack-local/agents/ott_specialist/: agent.py
rag-stack-local/agents/software-developer/: Dockerfile  agent.py  requirements.txt
rag-stack-local/agents/utils/: __init__.py  agent_action.py  agent_state.py  (+7 more)
rag-stack-local/pipelines/: Dockerfile  docker-compose.yaml  langchain-basic-pipeline.py  qdrant-query-dev-pipeline.py  requirements.txt
rag-stack-local/rag/: requirements.txt
rag-stack-local/src/: README.md  pyproject.toml  requirements.txt
rag-stack-local/src/rag/: common.py  config.py
rag-stack-local/src/rag/libs/: __init__.py  token_counter.py
rag-stack-local/src/rag/qdrant/: __init__.py  manager.py
rag-stack-local/src/rag/readers/: __init__.py  base.py  chunk.py  cpp.py  markdown.py  openapi.py  pdf.py  repo.py
rag-stack-local/src/rag/readers/test/: test_cpp.py  test_markdown.py  test_pdf.py
rag-stack-local/src/rag/readers/test/samples/code/: fairplay-header.repomix  fairplay.repomix
rag-stack-local/src/rag/readers/test/samples/markdown/: quantum.md
rag-stack-local/src/rag/samples/: fairplay.repomix
rag-stack-local/src/rag/tool/: chat.py  digest.py  embed.py  retrieve.py
redis/: docker-compose.yaml
(+14 files in other folders)
