[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag"
version = "0.1.0"
description = "RAG (Retrieval-Augmented Generation) toolkit for Redge Media"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Redge Media"}
]